# marshmallow-objects

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  LICENSE  README.md  setup.cfg  setup.py  test-requirements.txt
.github/: CODEOWNERS  dependabot.yml  sv-go-tools-bot.asc.gpg
.github/workflows/: codeql.yaml  master.yml  milestone.yml  release.yml  test.yml
marshmallow_objects/: __init__.py  models.py
tests/: test_models.py
tools/: auto_format.sh  bump_version
