[metadata]
name = marshmallow-objects
summary = Marshmallow Objects and Models
description-file = README.md
description-content-type = text/markdown
author = Sergey Vilgelm
author-email = sergey@vilgelm.info
home-page = https://github.com/SVilgelm/marshmallow-objects
license = MIT License
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules
keywords = marshmallow objects models yaml json ini config parser

[files]
packages = marshmallow_objects

[bdist_wheel]
universal = 0

[flake8]
max-line-length = 120

[ossaudit]
# 06e60262-8241-42ef-8f64-e3d72091de19 - setuptools
# e4c955a3-2004-472e-920b-783fea46c3cd - pip
ignore-ids = 06e60262-8241-42ef-8f64-e3d72091de19,e4c955a3-2004-472e-920b-783fea46c3cd
