[metadata]
name = marshmallow-objects
summary = Marshmallow Objects and Models
description-file = README.md
description-content-type = text/markdown
author = Sergey Vilgelm
author-email = sergey@vilgelm.info
home-page = https://github.com/sv-tools/marshmallow-objects
license = MIT License
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules
keywords = marshmallow objects models yaml json ini config parser

[files]
packages = marshmallow_objects

[bdist_wheel]
universal = 0

[flake8]
max-line-length = 120

[ossaudit]
# 06e60262-8241-42ef-8f64-e3d72091de19 - setuptools
# the fix is released in the v40.8.0 of setuptools,
# but the database is not updated yet.
# Here is the ticket: https://github.com/OSSIndex/vulns/issues/58
ignore-ids = 06e60262-8241-42ef-8f64-e3d72091de19
